feat(generic_validator): funcionando com lançamento de exception correta.
