# category-api/src/main/java/cryss/dev/category_api/domain/author/CreateNewAuthor.java
@@ -1,0 +1,8 @@
+package cryss.dev.category_api.domain.author;
+
+import org.openapitools.model.AuthorResponse;
+import org.openapitools.model.NewAuthor;
+
+public interface CreateNewAuthor {
+    AuthorResponse create(NewAuthor author);
+}
