# category-api/src/main/java/cryss/dev/category_api/infraestructure/adapters/repositories/jpa/AuthorJPAEntity.java
@@ -1,0 +1,49 @@
+package cryss.dev.category_api.infraestructure.adapters.repositories.jpa;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.PrePersist;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.io.Serializable;
+import java.time.LocalDateTime;
+
+@Entity
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+@Data
+public class AuthorJPAEntity implements Serializable {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    private Long id;
+
+    @NotBlank
+    private String name;
+
+    @NotBlank
+    private String description;
+
+    @NotBlank
+    @Size(min = 3, max = 400)
+    @Column(unique = true)
+    private String email;
+
+    private LocalDateTime createdAt ;
+
+    @PrePersist
+    public void prePersist() {
+        final LocalDateTime newDate = LocalDateTime.now().withNano(0);
+        this.createdAt = newDate;
+    }
+
+}
