# category-api/src/main/java/cryss/dev/category_api/infraestructure/adapters/validation/constraints/AuthorUniqueNameValidator.java
@@ -1,8 +1,11 @@
 package cryss.dev.category_api.infraestructure.adapters.validation.constraints;
 
 import cryss.dev.category_api.domain.category.UniqueFieldValidator;
+import cryss.dev.category_api.infraestructure.adapters.repositories.jpa.AuthorRepositoryJPA;
 import cryss.dev.category_api.infraestructure.adapters.repositories.jpa.CategoryRepositorySpringJPA;
+import cryss.dev.category_api.infraestructure.adapters.repositories.jpa.SpringAuthorRepositoryJPA;
 import lombok.RequiredArgsConstructor;
+import org.openapitools.model.NewAuthor;
 import org.openapitools.model.NewCategory;
 import org.springframework.stereotype.Component;
 
@@ -10,19 +13,19 @@ import java.io.Serializable;
 
 @Component
 @RequiredArgsConstructor
-public class CategoryUniqueNameValidator implements UniqueFieldValidator, Serializable {
+public class AuthorUniqueNameValidator implements UniqueFieldValidator, Serializable {
 
-    private final CategoryRepositorySpringJPA repository;
+    private final SpringAuthorRepositoryJPA repository;
 
     @Override
     public Boolean isValid(Object object) {
-        NewCategory category = (NewCategory) object;
-       return  !repository.findCategoryByName (category.getName ()).isPresent ();
+        NewAuthor category = (NewAuthor) object;
+       return  !repository.findAuthorByName (category.getName ()).isPresent ();
     }
 
     @Override
     public Boolean accept(Object object) {
-        return object instanceof NewCategory;
+        return object instanceof NewAuthor;
     }
 
 }
