# category-api/src/main/resources/openapi.yml
@@ -51,8 +51,53 @@ paths:
           $ref: '#/components/responses/ServiceUnavailableError'
         504:
           $ref: '#/components/responses/GatewayTimeoutError'
+  /author:
+    post:
+      tags:
+        - Authors
+      summary: Creates a new author
+      description: Creates a new author
+      operationId: createNewAuthor
+      requestBody:
+        description: New author informations
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewAuthor'
+        required: true
+      responses:
+        200:
+          $ref: '#/components/responses/AuthorCreated'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        403:
+          $ref: '#/components/responses/Forbidden'
+        413:
+          $ref: '#/components/responses/ContentTooLarge'
+        415:
+          $ref: '#/components/responses/UnsupportedMediaType'
+        422:
+          $ref: '#/components/responses/UnprocessableContent'
+        429:
+          $ref: '#/components/responses/TooManyRequests'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+        502:
+          $ref: '#/components/responses/BadGatewayError'
+        503:
+          $ref: '#/components/responses/ServiceUnavailableError'
+        504:
+          $ref: '#/components/responses/GatewayTimeoutError'
 components:
   responses:
+    AuthorCreated:
+      description: Shows detailed informations of a new author created.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/AuthorResponse'
     CategoryCreated:
       description: Shows detailed informations of a new category created.
       content:
@@ -176,6 +221,59 @@ components:
             message: "Gateway timeout"
             description: The server, while acting as a gateway or proxy, did not get a response in time from the upstream server that it needed in order to complete the request.
   schemas:
+    AuthorResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+        name:
+          type: string
+          description: The author's name.
+          example: Gustavo
+        email:
+          type: string
+          description: The author's e-mail.
+          example: guga@gmail.com
+        description:
+          type: string
+          example: |-
+            Gustavo wrotes many books of love and death, spirituality and empathy .
+          description: A short description about author
+        createdAt:
+          type: string
+          description: author creation instant
+          format: date-time
+          example: '2024-12-22T18:03:39'
+    NewAuthor:
+      type: object
+      x-class-extra-annotation: '@cryss.dev.category_api.infraestructure.adapters.validation.constraints.UniqueFieldName(message="Fild name already in use")'
+      required:
+        - name
+        - email
+        - description
+      properties:
+        name:
+          type: string
+          description: The author's name.
+          example: Gustavo
+          x-field-extra-annotation: "@jakarta.validation.constraints.NotEmpty"
+        email:
+          type: string
+          description: The author's e-mail
+          format: email
+          example: guga@gmail.com
+          x-field-extra-annotation: "@cryss.dev.category_api.infraestructure.adapters.validation.constraints.UniqueEmail"
+          minLength: 6  # Optional: minimum length for email
+          maxLength: 30  # Optional: maximum length for email
+        description:
+          type: string
+          example: |-
+            Gustavo wrotes many books of love and death, spirituality and empathy .
+          description: A short description about author
+          minLength: 3
+          maxLength: 400
     CategoryResponse:
       type: object
       properties:
